--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-  font-family: 'Rubik', 'Arial', sans-serif;
+  font-family: 'Golos Text', 'Arial', sans-serif;
   font-style: normal;
   max-width: 1280px;
   margin: 0 auto;
