--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -1,7 +1,6 @@
 .button {
-  border: none; 
+  border: none;
   outline: none;
   background-color: #fff;
-  font-weight: bold;
-  font-size: 13px;
+  padding: 0;
 }
