--- a/pages/index.css
+++ b/pages/index.css
@@ -11,9 +11,15 @@
 @import url("../blocks/button/button.css");
 
 @import url("../blocks/welcome/welcome.css");
+@import url("../blocks/welcome/__text/welcome__text.css");
 @import url("../blocks/welcome/__title/welcome__title.css");
 @import url("../blocks/welcome/__subtitle/welcome__subtitle.css");
 
 @import url("../blocks/two-columns/two-columns.css");
 @import url("../blocks/two-columns/two-columns__img/two-columns__img.css");
 @import url("../blocks/two-columns/two-columns__text/two-columns__text.css");
+
+@import url("../blocks/place/place.css");
+@import url("../blocks/place/__title/place__title.css");
+@import url("../blocks/place/__text/place__text.css");
+@import url("../blocks/place/__image/place__image.css");
