--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,6 +1,7 @@
 .place__text {
+    margin: 63px auto 85px 70px;
     display: flex;
-    flex-flow: column;
-    width: 350px;
-    margin-left: 70px;
+    flex-direction: column;
+    justify-content: space-between;
+    color: #a6a6a6;
 }
