--- a/blocks/two-columns/two-columns.css
+++ b/blocks/two-columns/two-columns.css
@@ -2,5 +2,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0;
-  padding-top: 130px;
+}
+
+.two-columns:first-child {
+  margin-top: 130px;
 }
