--- a/pages/index.css
+++ b/pages/index.css
@@ -19,7 +19,9 @@
 @import url("../blocks/two-columns/two-columns__img/two-columns__img.css");
 @import url("../blocks/two-columns/two-columns__text/two-columns__text.css");
 
+@import url("../blocks/main/main.css");
 @import url("../blocks/place/place.css");
 @import url("../blocks/place/__title/place__title.css");
 @import url("../blocks/place/__text/place__text.css");
 @import url("../blocks/place/__image/place__image.css");
+@import url("../blocks/place/__paragraph/place__paragraph.css");
