--- a/blocks/nav/nav__link/nav__link.css
+++ b/blocks/nav/nav__link/nav__link.css
@@ -3,4 +3,25 @@
   color: #000;
   font-size: 12px;
   font-weight: bold;
+  display: block;
+}
+
+@media (max-width : 768px) {
+
+  .nav__link {
+  font-size: 22px;
+  padding: 15px 0 15px 30px;
+  }
+
+  .nav__link:hover{
+
+   background-color: #fed2b0;
+  }
+  
+  .navigation__link:focus{
+    outline: none;
+    border: 3px solid #fed2b0;
+  }
+  
+
 }
