--- a/blocks/nav/__button/nav__button.css
+++ b/blocks/nav/__button/nav__button.css
@@ -1,4 +1,4 @@
-.button {
+.nav__button {
   border: none;
   outline: none;
   background-color: #fff;
@@ -6,6 +6,6 @@
   transition: opacity .2s;
 }
 
-.button:hover {
+.nav__button:hover {
   opacity: .6;
 }
