--- a/blocks/nav/__letter-text/nav__letter-text.css
+++ b/blocks/nav/__letter-text/nav__letter-text.css
@@ -1,10 +1,10 @@
-.button__text{
+.nav__letter-text{
   color: #000;
   font-size: 12px;
   font-weight: bold;
 }
 @media (max-width: 768px) {
-  .button__text{
+  .nav__letter-text{
     display: none;
   }
 }
