--- a/blocks/people-says/people-says.css
+++ b/blocks/people-says/people-says.css
@@ -1,5 +1,17 @@
 .people-says {
-    width: 100%;
-    max-width: 1280px;
-    padding-top: 110px
+	width: 100%;
+	max-width: 1280px;
+	padding-top: 110px
+}
+
+@media screen and (max-width: 768px) {
+	.people-says {
+		padding-top: 60px;
+	}
+}
+
+@media screen and (max-width: 426px) {
+	.people-says {
+		padding-top: 30px;
+	}
 }
