--- a/blocks/people/__title/people__title.css
+++ b/blocks/people/__title/people__title.css
@@ -1,9 +1,15 @@
 .people__title {
-    text-transform: uppercase;
-    color: #fed2b0;
-    font-size: 9px;
-    margin: 0;
-    line-height: 15px;
-    margin-bottom: 30px;
-    font-family: 'Inter';
+	text-transform: uppercase;
+	color: #fed2b0;
+	font-size: 9px;
+	margin: 0;
+	line-height: 15px;
+	margin-bottom: 30px;
+	font-family: 'Inter';
+}
+
+@media screen and (max-width: 426px) {
+	.people__title {
+		text-align: center;
+	}
 }
