--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,8 +1,14 @@
 .place__text {
-    padding: 63px 70px 85px 70px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    color: black;
-    background-color: #f2f2f2;
+	padding: 63px 70px 85px 70px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	color: black;
+	background-color: #f2f2f2;
+}
+
+@media screen and (max-width: 768px) {
+	.place__text {
+		padding: 40px
+	}
 }
