--- a/blocks/welcome/__text/welcome__text.css
+++ b/blocks/welcome/__text/welcome__text.css
@@ -1,3 +1,10 @@
 .welcome__text {
-    padding-top: 21%;
+	padding-top: 21%;
+}
+
+@media (max-width: 426px) {
+	.welcome__text {
+		padding-top: 10px;
+		text-align: center;
+	}
 }
