--- a/blocks/people-grid/__name/people-grid__name.css
+++ b/blocks/people-grid/__name/people-grid__name.css
@@ -1,8 +1,14 @@
 .people-grid__name {
-    margin: 0;
-    padding: 0;
-    font-family: 'Inter';
-    text-transform: uppercase;
-    font-size: 11px;
-    font-weight: bold;
+	margin: 0;
+	padding: 0;
+	font-family: 'Inter';
+	text-transform: uppercase;
+	font-size: 11px;
+	font-weight: bold;
+}
+
+@media screen and (max-width: 426px) {
+	.people-grid__name {
+		text-align: center;
+	}
 }
