--- a/blocks/people/__subtitle/people__subtitle.css
+++ b/blocks/people/__subtitle/people__subtitle.css
@@ -1,9 +1,16 @@
 .people__subtitle {
-    color: #000;
-    font-size: 33px;
-    margin: 0;
-    padding: 0;
-    line-height: 40px;
-    font-weight: bold;
-    letter-spacing: 0.2px;
+	color: #000;
+	font-size: 33px;
+	margin: 0;
+	padding: 0;
+	line-height: 40px;
+	font-weight: bold;
+	letter-spacing: 0.2px;
+}
+
+@media screen and (max-width: 426px) {
+	.people__subtitle {
+		font-size: 25px;
+		text-align: center;
+	}
 }
