--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,5 +1,11 @@
 .place__image {
-    width: 640px;
-    height: 534px;
-    object-fit: cover;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+@media (max-width: 426px) {
+	.place__image {
+		order: 1;
+	}
 }
