--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,11 @@
 .place__title {
-    margin: 0;
-    font-size: 34px;
-    color: #000;
+	margin: 0;
+	font-size: 34px;
+	color: #000;
+}
+
+@media (max-width: 426px) {
+	.place__title {
+		font-size: 25px;
+	}
 }
