--- a/blocks/welcome/welcome.css
+++ b/blocks/welcome/welcome.css
@@ -8,10 +8,15 @@
 	margin: 0 auto;
 }
 
-@media screen and (max-width: 426px) {
+
+@media screen and (max-width: 780px) {
 	.welcome {
 		grid-template-columns: 1fr;
-		margin: 0 auto;
+	}
+}
+
+@media screen and (max-width: 426px) {
+	.welcome {
 		max-width: 320px;
 		width: 100%;
 	}
